# UnRuster

./: .gitignore  CLAUDE.md  Cargo.toml  RustRuleBook.md  UnRusterRoadmap.md  rust-toolchain.toml  unruster.sh
fixtures/sample/: notes.txt
fixtures/sample/src/: control_flow.rs  exotic.rs  if_chains.rs  inference.rs  main.rs
fixtures/sample/tests/: dummy.rs
src/: ast.rs  audit.rs  callers.rs  casts.rs  catch_all.rs  cfg_eval.rs  context.rs  conversion_pairs.rs  conversions.rs  dead_code.rs  driver.rs  error_swallows.rs  explain.rs  facts.rs  field.rs  field_uses.rs  fields.rs  impls.rs  index.rs  inventory.rs  lib.rs  macro_scan.rs  main.rs  metrics.rs  parallel_matches.rs  parse.rs  pass_through.rs  playbook.txt  report.rs  semantic.rs  stringly.rs  takes_mut.rs  tests_cmd.rs  type_refs.rs  variants.rs
src/analysis/: api_leak.rs  call_graph.rs  lifetime_smells.rs  mod.rs  mutation.rs  stringly_error.rs  unsafe_no_safety_doc.rs  util.rs
tests/: cli.rs
tests/fixtures/leaky/: Cargo.toml
tests/fixtures/leaky/src/: lib.rs
tests/fixtures/stringly/: Cargo.toml
tests/fixtures/stringly/src/: lib.rs
tests/fixtures/unsafe_docs/: Cargo.toml
tests/fixtures/unsafe_docs/src/: lib.rs
unruster-facts/: Cargo.toml
unruster-facts/src/: lib.rs
unruster-viewer/: Cargo.toml
unruster-viewer/src/: main.rs
