[package]
name = "unruster"
version = "0.1.15"
edition = "2021"
description = "CLI for querying Rust codebases: inventory, call graph, field uses."
license = "MIT OR Apache-2.0"

[[bin]]
name = "unruster"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
